--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 <header>
     <a href="{% url 'home' %}">Home</a>  |
     <a href="{% url 'about' %}">About</a>  |
+    <a href="{% url 'products' %}">Products</a>  |
 </header>
 
 {% block content %}
